<resources>
    <string name="app_name">MyProject</string>
    <string name="app_url">http://sharesdk.cn</string>
    <string name="uname">帐号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="news">新闻</string>
    <string name="joke">笑话</string>
    <string name="picture">美图</string>
    <string name="person">我的</string>
    <string name="forgetPwd">忘记密码？</string>
    <string name="newUser">新用户注册</string>

    <string name="auto_login_failed">自动登录失败</string>
    <string name="auto_login_third_failed">第三方自动登录失败:</string>
    <string name="update_userinfo_success">更新用户信息成功</string>
    <string name="update_userinfo_failed">更新用户信息失败</string>
    <string name="my_collection">我的收藏</string>
    <string name="collection_data">收藏数据:</string>
    <string name="name_or_pwd_is_null">账户或密码不能为空！</string>
    <string name="login_succes">登录成功</string>
    <string name="name_or_pwd_error">帐号或密码错误</string>
    <string name="qq">qq</string>
    <string name="login_success_return">登陆成功返回:</string>
    <string name="third_login_failure">第三方登录失败:</string>
    <string name="more_info">完善个人资料</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="select_sex">选择性别</string>
    <string name="select_age">选择年龄</string>
    <string name="select_city">选择城市</string>
    <string name="more_info_success">完善个人信息成功</string>
    <string name="more_info_failure">完善个人信息失败</string>
    <string name="please_complete_info">请完善您的信息</string>
    <string name="select_photo_failure">选择头像失败</string>
    <string name="upload_photo_success">上传图片成功</string>
    <string name="upload_photo_failure">上传图片失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="is_illegal">账户和密码不能小于6位数</string>
    <string name="settings">设置</string>
    <string name="request_failure">请求失败</string>
    <string name="collection">收藏</string>
    <string name="is_collection">是否收藏？</string>
    <string name="collection_success">收藏成功!</string>
    <string name="collection_failure">收藏失败!</string>
    <string name="cancel">取消</string>
    <string name="about_me">关于我们</string>
    <string name="confirm">确定</string>
</resources>
